# rustotf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
read_buffer_derive/: Cargo.toml
read_buffer_derive/src/: lib.rs
src/: cli.rs  font.rs  lib.rs  main.rs  table.rs  types.rs  util.rs
src/table/: HVAR.rs  MVAR.rs  OS_2.rs  avar.rs  cmap.rs  cvt_.rs  fpgm.rs  fvar.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  loca.rs  maxp.rs  name.rs  post.rs  prep.rs
src/table/bitmap/: ebdt.rs  eblc.rs  ebsc.rs
src/table/cff/: cff_.rs  cff_data.rs  vorg.rs
src/table/color/: cbdt.rs  cblc.rs  colr.rs  cpal.rs  sbix.rs  svg_.rs
src/table/layout/: base.rs  gsub.rs  jstf.rs  math.rs
src/table/other/: dsig.rs  ltsh.rs
src/table/otvar/: avar.rs  fvar.rs  hvar.rs  mvar.rs
src/table/required/: cmap.rs  head.rs  hhea.rs  hmtx.rs  name.rs  os_2.rs  post.rs
src/table/ttf/: cvt_.rs  fpgm.rs  gasp.rs  glyf.rs  loca.rs  prep.rs
src/tables/bitmap/: ebdt.rs  eblc.rs
src/tables/cff/: cff_.rs  cff_char_string.rs  cff_data.rs  vorg.rs
src/tables/color/: cbdt.rs  cblc.rs  colr.rs  cpal.rs  sbix.rs  svg_.rs
src/tables/layout/: base.rs  gsub.rs  jstf.rs  math.rs
src/tables/other/: dsig.rs
src/tables/otvar/: avar.rs  fvar.rs  hvar.rs  mvar.rs
src/tables/required/: cmap.rs  head.rs  hhea.rs  maxp.rs  name.rs  os_2.rs  post.rs
src/tables/ttf/: cvt_.rs  fpgm.rs  gasp.rs  glyf.rs  loca.rs  prep.rs
tests/: get-fonts.sh  test.rs
