[package]
name = "rustotf"
version = "0.1.0"
authors = ["Xiangdong Zeng <xdzeng96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
chrono = "0.4"
encoding_rs = "0.8.19"
flate2 = "1.0.11"
